# precedent-finder

./: .gitignore  PROGRESS.md  PROJECT.md  README.md  app.py  main.py  pyproject.toml  requirements.txt
.streamlit/: config.toml
data/: company_info.md  competitor_links.md  competitor_research.md  defense_core.md  opinion_draft.md  precedent_reference.md  precedents.json  similar_companies.md
data/chroma_db/6e42d423-0b6f-4c75-bbe0-07e28df93c6f/: index_metadata.pickle
data/chroma_db/a669e2db-8e37-4fa2-b9c8-29d826794979/: index_metadata.pickle
docs/: case-context.md  development-log.md  implementation-plan-v3.md  key-precedents.md  next-steps.md
docs/worklogs/: 2026-03-17.md
pages/: data.py  defense.py
src/precedent_finder/: cli.py
src/precedent_finder/crawlers/: court_scraper.py  court_viewer.py  law_api.py  law_scraper.py  pdf_collector.py  web_collector.py
src/precedent_finder/db/: store.py
src/precedent_finder/exporters/: notebook_lm.py
src/precedent_finder/rag/: chunker.py  qa.py  retriever.py
