[project]
name = "precedent-finder"
version = "0.1.0"
description = "법령 + 판례 기반 AI 법률 대응 시스템"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "httpx>=0.27",
    "beautifulsoup4>=4.12",
    "lxml>=5.0",
    "pdfplumber>=0.11",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "python-dotenv>=1.0",
    "rich>=13.0",
    "typer>=0.12",
    "selenium>=4.41.0",
    "webdriver-manager>=4.0.2",
]

[project.scripts]
precedent-finder = "precedent_finder.cli:app"
